@@ -1,0 +1,20 @@
+.inline#inline{ hidden_if(session[:task_new].nil?) }
+  - form_for(@task) do |f|
+    = hidden_field_tag "task[user_id]", @current_user.id
+    %table{ :align => :center, :cellpadding => 0, :cellspacing => 0 }
+      %tr
+        %td{ :valign => :top }
+          .label.top.req Task name:
+          = f.text_field :name, :style => "width:320px"
+        %td= spacer
+        %td{ :valign => :top }
+          .label.top.req Due:
+          = f.select :due_at, @due_date, {}, { :style => "width:120px" }
+        %td= spacer
+        %td{ :valign => :top }
+          .label.top.req Category:
+          = f.select :category, @category, { :include_blank => "-- None --" }, { :style => "width:120px" }
+        %td= spacer
+        %td{ :valign => :top }
+          .label.top.req &nbsp;
+          = f.submit "Assign Task", :onclick => "alert('Not implemented yet.'); return false;" 
