@@ -1,0 +1,13 @@
+%li[completed]{ highlightable(dom_id(completed, :tools)) }
+  - if completed.category
+    .strip{:class => completed.category}= Setting.task_category[completed.category.intern]
+  - else
+    .strip &nbsp;
+  %div
+    .tools{ hidden, :id => dom_id(completed, :tools) }
+      %small
+        = link_to_remote("Delete!", :url => task_path(completed), :method => :delete, :before => visual_effect(:highlight, dom_id(completed), :startcolor => "#afeeee"))
+    %strike= completed.name
+    %dt
+      %span.cool= "Completed " << distance_of_time_in_words(completed.completed_at, Date.today) << " ago"
+      
