@@ -24,19 +24,18 @@
   category = %w(call email folowup lunch meeting money presentation trip) << ""
 
   for i in (1..30) do
-    seed = rand(5)
 %>
 task<%= i %>:
   id           : <%= i %>
   user_id      : <%= rand(5) + 1 %>
-  assigned_to  : <%= rand(5) + 1 %>
+  assigned_to  : <%= rand(5) == 0 ? rand(5) + 1 : "" %>
   name         : <%= Faker::Lorem::sentence(rand(2) + 2).sub(".", "") %>
   asset_id     : <%=  %>
   asset_type   : <%=  %>
   priority     :
   category     : <%= category[rand(category.size)] %>
-  due_at       : <%= seed == 0 ? "'#{Task::ASAP}'" : (seed == 1 ? Date.today - rand(15).days : Date.today + rand(15).days) %>
-  completed_at :
+  due_at       : <%= seed = rand(5); seed == 0 ? "'#{Task::ASAP}'" : (seed == 1 ? Date.today - rand(15).days : Date.today + rand(15).days) %>
+  completed_at : <%= rand(5) == 0 ? Date.today - rand(5).days : "" %>
   deleted_at   :
   created_at   : <%= starts = Date.today - rand(15).days %>
   updated_at   : <%= starts + rand(5).days %>
